--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ div.gallery {
   border: 1px solid #ccc;
   float: left;
   width: 180px;
+  padding: 10px;
 }
 
 div.gallery:hover {
@@ -71,10 +72,11 @@ div.gallery:hover {
 
 div.gallery img {
   width: 100%;
-  height: auto;
+  height: 250px;
 }
 
 div.desc {
   padding: 15px;
   text-align: center;
+  color: white;
 }
